# refiner-python

./: .gitignore  LICENSE  README.md  cli.py  pyproject.toml  requirements.txt
integrations/: refiner_openai.py  refiner_pinecone.py  refiner_spacy.py
src/ai-refiner/integrations/: refiner_pinecone.py
src/ai_refiner/: cli.py  refiner.py
src/ai_refiner/integrations/: refiner_openai.py  refiner_pinecone.py
src/ai_refiner/refiner/: embeddings.py
src/refiner/: embeddings.py  loaders.py  transformers.py
src/refiner/integrations/: __init__.py  refiner_openai.py  refiner_pinecone.py
