[project]
name = "refiner"
version = "0.0.1"
authors = [
  { name="Alex Daro", email="gmx2267@gmail.com" },
]
description = "API for creating OpenAI embeddings, storing them in Pinecone, and using them to search for similar text."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  "click==8.1.3",
  "matplotlib==3.7.1",  
  "openai==0.27.6",  
  "pandas==2.0.1",  
  "pinecone-client==2.2.1",
  "plotly==5.14.1",
  "python-dotenv==1.0.0",
  "scipy==1.10.1",
  "scikit-learn==1.2.2"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
refiner = "bin.cli:cli"

[project.urls]
"Homepage" = "https://github.com/adaro/ai-refiner"