[project]
name = "refiner"
version = "0.0.6"
authors = [
  { name="Alex Daro", email="gmx2267@gmail.com" },
]
description = "Refiner is a python package that allows you to store text as vectors in Pinecone and then search for similar text. It uses OpenAI to generate embeddings and then uses Pinecone to store and search for similar text."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  "click",
  "matplotlib",
  "openai",
  "pandas",
  "pinecone-client",
  "plotly",
  "python-dotenv",
  "scipy",
  "scikit-learn"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/adaro/ai-refiner"